[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-x"
version = "0.1.1a"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "matplotlib",
    "numpy",
    "scikit-learn",
]
requires-python = ">=3.10"
authors = [{name = "Luxter77"}] 
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/Luxter77/NN_x.git"
"Bug Tracker" = "https://github.com/Luxter77/NN_x/issues"